--- a/styles/app.css
+++ b/styles/app.css
@@ -54,6 +54,9 @@ padding: 10px 0 0 0;
     padding: 0px 0px 5px 25px;
 	color: #0000C0;
 }
+.size{
+float: right;
+}
 .file{
     background: url('../app-icons/page_white.png') no-repeat top left;
 }
@@ -74,6 +77,7 @@ padding: 10px 0 0 0;
 }
 .folder{
     background: url('../app-icons/folder.png') no-repeat top left;
+    cursor: pointer;
 }
 .music{
     background: url('../app-icons/music.png') no-repeat top left;
