--- a/styles/app.css
+++ b/styles/app.css
@@ -41,8 +41,6 @@ input, button{
     padding: 2px;
 }
 #viewraw{
-    position: absolute;
-    top: 2px;
     left: 2px;
 }
 #connected{
@@ -50,18 +48,25 @@ input, button{
    top: 5px;
    left: 248px;
 }
-#about{
-    position: absolute;
-    top: 2px;
-    left: 210px;
-}
-#disconnect{
+#viewraw, #about, #disconnect, #reload{
    position: absolute;
    top: 2px;
-   left: 98px;
+   width: 50px;
+   height: 50px;
+}
+#about{
+    left: 187px;
+}
+#disconnect{
+   left: 125px;
+   font-size: 9px
+}
+#reload{
+   left: 63px;
+   font-size: 12px;
 }
 #header{
-    height: 25px;
+    height: 55px;
 }
 .input, .console, .command, .data, .output{
 	padding: 2px 0px;
@@ -105,15 +110,16 @@ input, button{
     float: right;
     clear: both;
     padding: 10px;
+    width: 50px;
 }
-#fileopen{
+#fileopen, #imageopen{
     position: absolute;
-    top: 52px;
+    top: 75px;
     left: 5px;
     right: 8px;
     bottom: 35px;
 }
-#fileopen textarea{
+#fileopen textarea, #imageopen{
     width: 100%;
     height: 100%;
 }
