--- a/styles/app.css
+++ b/styles/app.css
@@ -119,11 +119,14 @@ input, button{
     right: 8px;
     bottom: 35px;
 }
-#fileopen textarea, #imageopen{
+#fileopen textarea, #imageopen #image{
     width: 100%;
     height: 100%;
 }
-#filename{
+#image{
+    overflow: scroll;
+}
+#filename, #imagename{
     position: absolute;
     top: -21px;
 }
