--- a/styles/izzyftp.css
+++ b/styles/izzyftp.css
@@ -19,6 +19,35 @@ body{
 	padding: 0 0 40px 0;
 	margin: 0;
 }
+/** UPLOAD POPUP */
+#uploadpopup{
+    border: 2px solid #953734;
+    padding: 20px;
+    background: white;
+    position: fixed;
+    top: 10px;
+    border-radius: 5px;
+    width: 70%;
+    margin: 0 10%;
+    z-index: 11;
+}
+#uploadpopup div{
+    margin: 0px 0px 20px 0px;
+}
+#uploadbutton{
+    text-align: center;
+}
+#uploadbutton button{
+    margin: 0 10px 0 0;
+    padding: 14px;
+    color: white;
+}
+#uploadclose{
+    background: #DE4848;
+}
+#uploadaction{
+    background: #34BC49;
+}
 /** WORKING SCREEN */
 #screen{
 	overflow-x: hidden;
@@ -134,7 +163,10 @@ textarea{
 #reload{
      background: #469DA1;
  }
- /** FILE CONTENT */
+ #upload{
+      background: #2042D5;
+  }
+/** FILE CONTENT */
  #buttons{
     height: 33px;
  }
