--- a/styles/izzyftp.css
+++ b/styles/izzyftp.css
@@ -8,7 +8,7 @@ html{
     font-family: arial;
     font-size: 16px;
 }
-input{
+input, select{
     font-size: 16px;
     width: 100%;
     -webkit-box-sizing : border-box;‌​
@@ -111,7 +111,7 @@ button[disabled]{
     border-radius: 5px;
     width: 70%;
     margin: 0 10%;
-    z-index: 11;
+    z-index: 15;
 }
 #newfilepopup div{
     margin: 0px 0px 10px 0px;
@@ -232,10 +232,11 @@ textarea{
     top: 0;
 }
 #connection p{
-    padding: 10px 0 0 0;
+    padding: 0;
     line-height: 0;
+    margin: 20px 0px 8px 0px;
 }
-#connection button{
+#connection #connect{
     font-size: 20px;
     width: 100px;
     height: 100px;
@@ -245,6 +246,21 @@ textarea{
     text-align: center;
     width: 100%;
     padding: 20px 0;
+}
+#optionkey{
+    position: absolute;
+    bottom: 12px;
+    right: 5px;
+    white-space: nowrap;
+}
+#connection select{
+    width: 90%;
+}
+#initkey{
+    background: url('../app-icons/key_go.png') no-repeat center white;
+	  height: 23px;
+    width: 23px;	
+    float: right;
 }
 /** MENU */
 #menupopup{
@@ -319,7 +335,7 @@ textarea{
     width: 70%;
     margin: 70px 10%;
     text-align: center;
-    z-index: 15;
+    z-index: 17;
 }
 #errorpopup button{
     margin: 16px 0 0 0;
