--- a/styles/izzyftp.css
+++ b/styles/izzyftp.css
@@ -216,10 +216,16 @@ button[disabled]{
 }
 textarea{
     width: 100%;
-    height: 100%;
+    height: 381px;
     position: fixed;
     background: transparent;
 }
+@media only screen and (max-height: 300px){
+    textarea{
+        height: 221px !important;
+    }
+}
+
 /** CONNECTION SCREEN */
 #connection h1{
     padding: 0px 0px 10px 50px;
